Fixed text wrapping in comments

--- a/src/components/comments/Comment.module.css
+++ b/src/components/comments/Comment.module.css
@@ -20,7 +20,16 @@
   color: inherit;
 }
 
-@media screen and (max-width: 350px) {
+.story-tem pre,
+code {
+  white-space: pre-wrap; /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word;
+}
+
+@media screen and (max-width: 650px) {
   .story-item {
     width: 100%;
   }
